src/objects/ER_Log_Message__c.object
<CustomObject>
    <fields>
        <fullName>ER_Debug_Level__c</fullName>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Message__c</fullName>
        <description>Log Message</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ER_Source_Function__c</fullName>
        <description>Origin class/component of log message</description>
        <label>Source Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Source__c</fullName>
        <description>Class/component of log message</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Message</label>
    <nameField>
        <displayFormat>Log_{0000000}</displayFormat>
        <label>Log Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>